# further-ng

./: Cargo.toml  README.md
libs/: ffmpeg  yt-dlp
src/: audio_queue.rs  main.rs  systemd_utils.rs
